--- a/style.css
+++ b/style.css
@@ -29,11 +29,6 @@ body
     flex-basis: 30%;
 }
 
-.gallery
-{
-    flex-basis: 50%;
-}
-
 .heading
 {
     font-size: 3rem;
@@ -46,4 +41,23 @@ body
     color: #ddd;
     margin-top: 10px;
     text-align: center;
+}
+
+.gallery
+{
+    flex-basis: 50%;
+    display: grid;
+    gap: 8px;
+    grid-template-columns: repeat(3,1fr);
+    grid-auto-rows: 120px;
+}
+
+.box
+{
+    background-size: cover;
+    background-position: top;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
