--- a/style.css
+++ b/style.css
@@ -60,4 +60,6 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #222;
+    background-blend-mode: hard-light;
 }
