--- a/style.css
+++ b/style.css
@@ -63,3 +63,13 @@ body
     background-color: #222;
     background-blend-mode: hard-light;
 }
+
+.row-2
+{
+    grid-row: span 2;
+}
+
+.col-2
+{
+    grid-column: span 2;
+}
