--- a/mediaquery.css
+++ b/mediaquery.css
@@ -18,4 +18,11 @@
         grid-row: span 1;
         grid-column: span 3;
     }
+
+    .box:active
+    {
+        background-color: #999;
+        background-position: center;
+        box-shadow: 0 0 4px #fff;
+    }
 }
