--- a/mediaquery.css
+++ b/mediaquery.css
@@ -19,7 +19,7 @@
         grid-column: span 3;
     }
 
-    .box:active
+    .box:hover
     {
         background-color: #999;
         background-position: center;
