--- a/style.css
+++ b/style.css
@@ -66,12 +66,12 @@ body
     cursor: pointer;
 }
 
-/* .box:hover
+.box:hover
 {
     background-color: #999;
     background-position: center;
     box-shadow: 0 0 4px #fff;
-} */
+}
 
 .row-2
 {
