--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ body
     background-color: #999;
     background-position: center;
     box-shadow: 0 0 4px #fff;
+    opacity: 1 !important;
 }
 
 .row-2
